:bug: `Return` was visible when closing the Color Picker, when not really supposed to be

--- a/styles/extensions/Return.less
+++ b/styles/extensions/Return.less
@@ -13,10 +13,11 @@
         box-shadow: 0 -1px 0 rgba(0, 0, 0, .07);
         position: absolute;
         top: 0; bottom: auto;
+        visibility: hidden;
 
         backface-visibility: hidden;
         transform-style: preserve-3d;
-        transition: transform .1s;
+        transition: transform .1s, visibility 0 .1s;
 
         transform: translateZ(1px);
 
@@ -59,6 +60,7 @@
         &.is--visible {
             transition: transform .2s;
             transform: translateY(-@size-return) translateZ(1px);
+            visibility: visible;
 
         //  : `is flipped` modifier
         // ---------------------------
